--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
-    "typeface-montserrat": "0.0.54",
+    "axios": "^0.18.0",
     "typeface-roboto": "0.0.54"
   }
 }
